--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="js/jquery.marquee.js"></script>
     <script src="js/moment.js"></script>
     <script src="js/main.js"></script>
-    <a class="twitter-timeline" data-lang="en" data-width="220" data-height="200" data-theme="dark" data-link-color="#F5F8FA" href="https://twitter.com/bouvse" data-chrome="nofooter noborders transparent noscrollbar noheader"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a class="twitter-timeline" data-lang="en" data-width="220" data-height="200" data-theme="dark" data-link-color="#F5F8FA" href="https://twitter.com/bouvse" data-border-color="#00000" data-chrome="nofooter noscrollbar noheader noborder"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script>if (window.module) module = window.module;</script>
   </body>
 </html>
