moved twitter to right and moved news to left

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </header>
 
     <footer class="footer" role="contentinfo">
-      <marquee behavior="scroll" scrollamount="5" direction="left" width="100%"></marquee>
+      <marquee behavior="scroll" scrollamount="5" direction="left" width="70%"></marquee>
     </footer>
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/jquery.marquee.js"></script>
     <script src="js/moment.js"></script>
     <script src="js/main.js"></script>
-    <a class="twitter-timeline" data-lang="en" data-width="220" data-height="200" data-theme="dark" data-link-color="#F5F8FA" href="https://twitter.com/bouvse" data-border-color="#00000" data-chrome="nofooter noscrollbar noheader noborder"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a class="twitter-timeline" data-lang="en" data-width="220" data-height="200" data-theme="dark" data-link-color="#F5F8FA" href="https://twitter.com/bouvse" data-border-color="#00000" data-chrome="nofooter noscrollbar noheader transparent noborder"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script>if (window.module) module = window.module;</script>
   </body>
 </html>
